# whatisleft

./: .cspell.json  .gitignore  .lefthook.yml  .pre-commit-config.yaml  .project-words.txt  .shellcheckrc  CHANGELOG.md  README.md  devbox.json  justfile  lefthook.yml  pyproject.toml  shell.nix
doc/: RUNBOOK.md  ideas.md
specs/: catalog.xml
src/: bats_framework.sh  get_project_files.sh  insert_line.sh  jsonl_conv.sh  pytest.sh  remove_line.sh  to_cobertura.sh  utils.sh  whatisleft.sh
test/: create_report.bats  get_project_files.bats  insert_line_sh.bats  jsonl_conv.bats  next_state.bats  process_file.bats  remove_line_sh.bats  test.bats  tests.sh  to_cobertura_xml.bats
test/assets/: file_list.list  remove_first_line_output.py  remove_third_line_output.py  testfile.py
test/assets/pytest/: module.py
test/failing_pytest/: test_module.py
test/resources/: remove_first_line_output.py  remove_third_line_output.py  testfile.jsonl  testfile.py  testfile_first_line_removed.jsonl  testfile_seventh_line_removed.jsonl  testfile_third_and_fourth_line_removed.jsonl  testfile_third_line_removed.jsonl
test/resources/pytest/project1_output/: coverage.xml  module.py.jsonl
test/resources/pytest/project2/: module.py  project.conf  test_module.py
test/resources/pytest/project2_output/: module.py.jsonl
test/resources/pytest/project3/: module2.py  project.conf  test_module.py
test/resources/pytest/project3_output/: coverage.xml  module2.py.jsonl
test/test_helper/: common-setup.bash
tests/: test_codefile.py  test_readdelete.py
whatisleft/: codefile.py  whatisleft.py
