[tool.poetry]
name = "whatisleft"
version = "0.1.0"
description = ""
authors = ["Mirko König <mirko.konig@here.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
